--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 
 
 .App {
-  text-align: center;
+  padding-left: 15px;
+  background-color: #111;
+  color: white;
+  padding-bottom: 1px;
 }
 
 .App-logo {
