--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -1,12 +1,12 @@
 .banner {
     color: white;
-    object-fit: contain;
-    height: 45rem;
+    /* object-fit: contain; */
+    height: 60rem;
     margin-left: -1.5rem;
 }
 
 .bannerContents {
-    margin-left: 3rem;
+    margin-left: 7rem;
     padding-top: 14rem;
     text-align: left;
 }
@@ -21,19 +21,37 @@
     
 }
 .bannerButton {
-    
+    display: inline-flex;
+    align-items: center;
     cursor: pointer;
     color: #fff;
     outline: none;
     border: none;
     border-radius: 3px;
-    padding: 5px 30px;
+    padding: 1rem 3rem;
     margin: 0 20px 20px 0;
     background-color: rgba(60, 61, 62, 0.5);
     transition: background-color 0.2s;
 }
 .bannerButton:hover {
     background-color: rgba(114, 117, 122, 0.5);
+}
+
+
+.bannerButton1 {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    padding: 1rem 3rem;
+    margin: 0 20px 20px 0;
+    background-color: #fff;
+    transition: background-color 0.1s;
+    will-change: background-color;
+    display: inline-flex;
+}
+.bannerButton1:hover {
+    background: rgba(255, 255, 255, 0.75);
 }
 
 .bannerDescription {
@@ -43,25 +61,30 @@
     font-size: 1.5rem;
 
     overflow: hidden;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  display: -webkit-box;
-  
-  display: -ms-flexbox;
-  -ms-word-break: break-all;
-  word-break: break-all;
- word-break: break-word;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+   
+ 
 }
 
 .bannerFadeBottom {
     width: 100%;
-    height: 14.45rem;
+    height: 28.45rem;
     background-image: linear-gradient(transparent,rgba(37,37,37,.61),#111);
+}
+.playIcon {
+    margin-right: 1rem;
 }
 /* mobile */
 @media  screen and (max-width: 739px) {
     .bannerDescription {
         width: 80%;
+    }
+    .bannerContents {
+        margin-left: 3rem;
+        
     }
 }
 
