--- a/src/components/row/Row.module.css
+++ b/src/components/row/Row.module.css
@@ -1,33 +1,137 @@
+.wrapperRow {
+
+}
+
 .row_posters {
     display: flex;
-    overflow-y: hidden;
     overflow-x: scroll;
     margin-bottom: 2rem;
+    scrollbar-width: 0;
+    overflow-y: hidden;
+    position: relative;
+    
 }
 
 .row_posters::-webkit-scrollbar {
     display: none;
 }
 
-.row_poster {
-    width: 100%;
-    object-fit: contain;
-    max-height: 100px;
-    transition: transform 350ms;
-    margin-right: 10px;
-}
 
-.row_poster:hover {
-    transform: scale(1.08);
+
+.row_poster {
+    
+    object-fit: cover;
+    max-height: 125.45px;
+    transition: transform 350ms;
+    /* margin-right: 10px; */
+    cursor: pointer;
+    border-radius: 3px;
+    
 }
 
 .title {
+    margin-top: 2.4rem;
     font-family: NetflixSansBold;
     text-align: left;
-    font-size: 1.6rem;
+    font-size: 2rem;
     margin-bottom: 1.2rem;
+    cursor: pointer;
 }
 
-.row_posterLarge {
-    max-height: 250px;
+
+.arrowHeader {
+    cursor: pointer;
+    color: #54b9c5;
+    display: inline-flex;
+    vertical-align: bottom;
+    height: 2rem;
+    align-items: baseline;
+    margin-left: 1rem;
+}
+
+.seeAllLink {
+    font-weight: 600;
+    font-size: 1.1rem;
+    opacity: 0;
+    height: 0;
+    will-change: opacity width;
+    transform: translateX(-1rem);
+    transition: all 0.5s;
+    
+    
+}
+.iconArrow {
+    font-size: 1.2rem;
+    vertical-align: bottom;
+    margin-left: 0.3rem;
+    font-weight: 900;
+    will-change: font-size opacity;
+    transition: all 0.2s;
+    opacity: 0;
+   transform: translate(-3rem);
+   
+}
+.iconArrow::after {
+    content: '\003E';
+}
+
+.wrapperRow:hover  .iconArrow{
+    opacity: 1;
+    
+    transform: translate(0);
+   
+}
+.wrapperRow:hover  .seeAllLink{
+    opacity: 1;
+    height: auto;
+    transform: translateX(0);
+}
+
+
+.overlaySwiper {
+    /* absolute top-0 left-0 w-full h-full hover:bg-black/80 opacity-0 hover:opacity-100 text-white */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    color: white; 
+    cursor: pointer;
+    
+}
+
+.overlaySwiper:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    opacity: 1;
+    
+}
+.overlaySwiper:hover .iconHeart,.overlaySwiper:hover .titleOfFilm{
+    visibility: visible;
+}
+.titleOfFilm {
+    /* white-space-normal text-xs md:text-sm font-bold flex justify-center items-center h-full text-center */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    white-space: normal;
+    font-size: 1.2rem;
+    visibility: hidden;
+}
+.iconHeart {
+    visibility: hidden;
+}
+/* mobile */
+@media screen and (max-width : 740px) {
+    .titleOfFilm {
+        font-size: 1.1rem;
+    }
+}
+/* mobile */
+@media screen and (min-width: 740px) and (max-width : 1024px) {
+    .titleOfFilm {
+        font-size: 1.2rem;
+    }
 }
