--- a/src/screen/SigUpScreen/SigUpScreen.css
+++ b/src/screen/SigUpScreen/SigUpScreen.css
@@ -26,7 +26,7 @@
     padding: 5px 15px;
 }
 
-.sigupScreen > form > button {
+.justClickMe {
     padding: 16px 20px;
     font-size: 1rem;
     color: #fff;
@@ -34,6 +34,7 @@
     background-color: #e5091e;
     font-size: 1.4rem;
     cursor: pointer;
+    display: block;
 }
 
 .sigupScreen > form > h4 {
